Alignment fix on conclusion section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,6 +68,10 @@ h4 {
   font-weight: 600;
 }
 
+.paragraph-section {
+  padding-bottom: 48px;
+}
+
 a:visited {
   color: inherit;
 }
@@ -78,10 +82,6 @@ section {
   padding-top: 64px;
   padding-bottom: 64px;
   justify-content: center;
-}
-
-.paragraph-section {
-  padding-bottom: 32px;
 }
 
 .text-centre {
